SPIXI/SPIXI.Android/Assets/html/css/spixiui.css
/* ... */
.spixi-switch.off {
    background-image: url("../img/switch-off.png");
}

.spixi-switch-description {
    float: left;
    margin-left: 20px;
    color: #1692d9;
    font-weight: bold;
}


/* Separators */
.spixi-separator-main {
    border-bottom: 6pt solid #dbdee1;   
}

.spixi-separator {
    height: 1px;
    color: rgba(0,0,0,0.12);
    width: 85%;
}
.spixi-separator.noheightmargins {
    margin-top: 0px;
    margin-bottom: 0px;
}
.spixi-separator.fullwidth {
    width: 100%;
}

.spixi-separator-full {
    width: 100%;
    margin-top: 5px;
    margin-bottom: 5px;
    color: rgba(0,0,0,0.12);
}

/* ExpansionBox */
.spixi-expansion {
    height: 50px;
    background-color: #eef2f5;
    border-bottom: 1px solid #d1d5d7;
    cursor: pointer;
}
.spixi-expanion.active {
    background-color: #e9eaeb;
}

.spixi-expansion-left {
    position: absolute;
    width: 20px;
    height: 50px;
    background-color: #dbdee1;
    margin-right: 10px;
}

.spixi-expansion .spixi-expansion-left {
    margin-right: 0px;
}

.spixi-expansion-left.active {
    background-color: #ad1457;
}
.spixi-expansion-icon {
    color: #ad1457;
    float:left;
    font-size: 16pt;
    margin-top: 10px;
    margin-left: 40px;
    margin-right: 10px;
}

.spixi-expansion-text {
    float:left;
    font-size: 14pt;
    margin-top: 10px;
    margin-left: 15px;
}
.spixi-expansion-right {
    color: #ad1457;
    float:right;
    font-size: 12pt;
    margin-top:12px;
    margin-right: 15px;
}

.spixi-expansion-bottom {
    height: 7px;
    background-color: #dbdee1;
}


.spixi-expansion-box {
    margin: auto;
    width: 85%;
    height: 50px;
    padding-top: 13px;
    
    background-color: #FFF;
    border-radius: 10px;
    box-shadow:0px 4px 10px #777;
}
.spixi-expansion-box.expanded {
    height: 150px;
}

.spixi-expansion-box-left {
    float:left;
    margin-left: 16px;
    margin-top: -2px;
    font-size: 18px;
    color: #c2185b;
}

.spixi-expansion-box-middle {
    float:left;
    margin-left: 18px;
    font-size: 12pt;
    font-weight: bold;
    color: #000;
}

.spixi-expansion-box-right {
    float:right;
    margin-right: 18px;
    color: #c2185b;
}

/* Sidebar */
.spixi-sidebar {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 5000; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
}
.spixi-sidebar-content {
    position: relative;
    background-color: #1f1f27;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.89);
    height: 100%;
    width: 75%;
    -webkit-animation-name: animateleft;
    -webkit-animation-duration: 0.4s;
    animation-name: animateleft;
    animation-duration: 0.4s;
    overflow: auto; /* Enable scroll if needed */
}

.spixi-sidebar-header {
    padding: 38px 24px;
    background-color: #191324;
    color: white;
    height: 204px;
    font-size: 16px;
    text-align: center;
}

.spixi-sidebar-closebutton {
    color: white;
    font-size: 18pt;
    text-align: left;
    width: 100%;
    display: block;
}

.spixi-sidebar-avatar {
    width: 70px;
    height: 70px;
    border-radius: 70px;
    margin-top: 0px;
    margin-left: 0px;
    object-fit: cover;
}
.spixi-sidebar-avatar-holder {
    text-align: left;
    margin-top: 36px;
}
.spixi-sidebar-title {
    text-align: left;
    font-size: 14pt;
    margin-left: 90px;
    margin-top: -46px;
}

.spixi-sidebar-item {
    height: 52px;
    color: #b5b5b5;
}
.spixi-sidebar-item:hover {
    background-color: #40404b;
}

.spixi-sidebar-item-text {
    padding-top: 14px;
    margin-left: 64px;
    font-size: 16px;    
    height: 52px;
    color: #b5b5b5;
    text-decoration: none;
    border-bottom: 1px solid #40404b;
}
.spixi-sidebar-item-icon {
    float: left;
    color: #b5b5b5;
    font-size: 18pt;
    margin-left: 8px;
    margin-top: 14px;
    width: 40px;
    text-align: center;
}


/* ListItems */
.spixi-list-item {
    width: 100%;
    background-color: #eef2f5;
    overflow: hidden;
    border-bottom: 1px solid #d1d5d7;
    padding: 10px;
    box-sizing: border-box;
    position: relative;
}
.spixi-list-item:hover
{
    background-color: #dae2e9;
}
.spixi-list-item:active {
    background-color: #dae2e9;
}

.address .spixi-list-item:hover,
.address .spixi-list-item:active {
    background-color: #eef2f5;
}

.spixi-list-item .read {
    color: #a3a4a5;
}

.spixi-list-item-avatar {
    width: 35pt;
    height: 35pt;
    border-radius: 35pt;
    object-fit: cover;
}

.spixi-list-item-avatar.selected {
    border: 2px solid #c2185b;
}

.spixi-list-item-left {
    display: inline-block;
    width: 50pt;
    vertical-align: middle;
}

.payment .spixi-list-item-left {
    font-size: 15pt;
    text-align: right;
}

.spixi-list-item-center {
    display: inline-block;
    width: 100%;
    box-sizing: border-box;
    vertical-align: middle;
}

.spixi-list-item-title {
    color: #000000;
    font-size: 10pt;
    font-weight: bold;
    overflow: hidden;
}
.spixi-list-item-title-center {
    color: #000000;
    font-size: 10pt;
    width: 100%;
    overflow: hidden;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}
.spixi-list-item-title-center.selected {
    font-weight: bold;
    font-style: italic;
}

.spixi-list-item-subtitle {
    color: #000000;
    font-size: 9pt;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.spixi-list-item-right {
    display: inline-block;
    color: #000000;
    font-size: 9pt;
    text-align: right;
    width: 50pt;
    vertical-align: middle;
}

.spixi-list-item-right .spixi-timestamp
{
    display:block;
    font-size: 8pt;
    vertical-align: middle;
    position: absolute;
    width: 60pt;
    max-width: 60pt;
    top: 50%;
    transform: translateY(-50%);
    right: 15px;
}
/* ... */

